# LM-A3

./: .gitignore  CLAUDE.md  README.md  cache_gt_records.py  colab_train.py  eval_from_checkpoint.py  eval_harness.py  experiment_registry.py  load_data.py  make_submission.py  prompting.py  prompting_harness.py  prompting_utils.py  pyproject.toml  t5_utils.py  train_t5.py  training_harness.py  utils.py
colab/: A4_colab.ipynb  A4_colab_gemma_ablation.ipynb  A4_colab_plan_c.ipynb  README.md  _build_ablation_notebook.py  _build_notebook.py  _build_plan_c_notebook.py
experiments/: registry.csv
records/: codegemma_7b_codegemma7b_k3_bm25_schema_dev.pkl  codegemma_7b_codegemma7b_k3_bm25_schema_pp_dev.pkl  codegemma_7b_codegemma7b_k3_bm25_schema_pp_test.pkl  codegemma_7b_codegemma7b_k3_compact_schema_dev.pkl  codegemma_7b_codegemma7b_k3_compact_schema_pp_dev.pkl  codegemma_7b_codegemma7b_k3_compact_schema_pp_test.pkl  codegemma_7b_codegemma7b_k3_compact_schema_test.pkl  gemma_12b_gemma3_12b_k3_bm25_compact_schema_dev.pkl  gemma_12b_gemma3_12b_k3_bm25_compact_schema_pp_dev.pkl  gemma_12b_gemma3_12b_k3_bm25_compact_schema_pp_test.pkl  gemma_12b_gemma3_12b_k3_bm25_compact_schema_test.pkl  gemma_1b_gemma1b_k0_dev.pkl  gemma_1b_gemma1b_k0_test.pkl  gemma_1b_gemma1b_k1_random_dev.pkl  gemma_1b_gemma1b_k1_random_test.pkl  gemma_1b_gemma1b_k3_bm25_dev.pkl  gemma_1b_gemma1b_k3_bm25_schema_dev.pkl  gemma_1b_gemma1b_k3_bm25_schema_test.pkl  gemma_1b_gemma1b_k3_bm25_test.pkl  gemma_1b_gemma1b_k3_random_dev.pkl  gemma_1b_gemma1b_k3_random_test.pkl  t5_ft_t5_ft_baseline_beam4_dev.pkl  (+15 more)
(+93 files in other folders)
