[project]
name = "assignment-4"
version = "0.1.0"
description = "Starter code for a text-to-SQL course assignment."
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==0.29.3",
    "bitsandbytes==0.43.1",
    "matplotlib==3.8.0",
    "nltk==3.8.1",
    "numpy==1.26.0",
    "plotly==5.18.0",
    "seaborn==0.13.2",
    "sentencepiece==0.2.0",
    "tokenizers==0.21.0",
    "torch==2.1.2",
    "tqdm==4.66.1",
    "transformers==4.51.3",
    "wandb==0.15.10",
]

[dependency-groups]
dev = [
    "hypothesis==6.96.1",
    "pytest==7.4.4",
]

[tool.uv]
package = false
